--- a/index.html
+++ b/index.html
@@ -20,7 +20,22 @@
     </tr>
   </table>
   <p>
-    I am Hitesh Piplani and am currently doing B-Tech in Computer Science and engineering.
+    I am Hitesh Piplani and am currently doing B-Tech in Computer Science and engineering.<br>
+• Good knowledge of the OOPS concept.<br>
+• Know programming languages like C, C++,
+Java, Python.<br>
+• Class topper in both first and second
+semesters of college.<br>
+• Time management and project
+management skills.<br>
+• Adaptability to change along with
+Interpersonal and communication skills.<br>
+• Good knowledge of Structured Query Language, and Database Management
+System<br>
+• Good knowledge of Data Structures
+and Algorithms, and Design and
+Analysis of Algorithms.<br>
+
   </p>
   <hr>
   <table border="2" >
