--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@ System<br>
 • Good knowledge of Data Structures
 and Algorithms, and Design and
 Analysis of Algorithms.<br>
+    <B>Achademic Achievements:</B><br>
+    2025 Passout
+B.Tech (CSE Core) : Vellore Institute of Technology (Vellore)<br>
+After First Year : 9.2CGPA<br>
+After Second Year : 9.1CGPA<br>
+(2018-2019)<br>
+Intermediate – MODERN VIDYA NIKETAN,<br>
+93.2percent.<br>
+(2017-2018)<br>
+High School – APEEJAY SCHOOL, FARIDABAD,<br>
+95.4percent.<br>
 
   </p>
   <hr>
